# base_model_io

./: .gitignore  LICENSE  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: ci.yml
docs/: mkdocs.yml
docs/docs/: index.md
docs/site/: 404.html  index.html  search.html
docs/site/search/: search_index.json
search/: search_index.json
src/base_model_io/: __init__.py  toml_base_model.py  yaml_base_model.py
tests/: __init__.py  test.toml  test.yaml  test_toml.py  test_yaml.py
